tests/negative/lexer/string-eof.orng
fn main() -> Int {
    let x = "this string doesn't have an end!